Added additional SourceSet for not-refactored unit tests.